src/App.css
*{
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: productSans;
}
@font-face {
  font-family: productSans;
  src: url(./assets//fonts/Product\ Sans\ Regular.ttf);
}
.App {
  text-align: center;
}

@media all and (max-width:800px) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

ul{
  list-style-type: none;
}

